Implement batch create
